<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoteEditModeFragment">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/edit_mode_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginTop="30dp"
            android:id="@+id/edit_mode_appbar_buttons"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:src="@drawable/back"

                android:id="@+id/btnBack"
                android:layout_width="@dimen/icon_btn_size"
                android:layout_height="@dimen/icon_btn_size"
                android:contentDescription="@string/read_button">

            </ImageButton>
            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageButton
                android:src="@drawable/edit"
                android:layout_marginEnd="20dp"

                android:id="@+id/btnEdit"
                android:layout_width="@dimen/icon_btn_size"
                android:layout_height="@dimen/icon_btn_size"
                android:contentDescription="@string/save_button">

            </ImageButton>

        </LinearLayout>
    </com.google.android.material.appbar.MaterialToolbar>
    <TextView
        android:id="@+id/note_title"
        android:layout_margin="20dp"
        android:textSize="@dimen/title_text_size"
        android:hint="@string/title"
        android:background="@null"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <!-- If you want the EditText to grow, use wrap_content -->
        <LinearLayout

            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="20dp"
            android:paddingStart="20dp">

            <TextView
                android:textColor="@color/white"
                android:background="@null"
                android:id="@+id/note_text"
                android:textColorHint="@color/hint"
                android:textSize="@dimen/note_text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/note_hint"
                android:inputType="textMultiLine"
                android:gravity="top"
                android:scrollbars="vertical"
                android:minLines="5" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>