<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <!-- No Variables Yet -->
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.appbar.MaterialToolbar

                app:titleTextColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/app_title"
                        android:text="@string/note"
                        android:textSize="43sp"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                    </TextView>

                    <ImageButton
                        android:id="@+id/btnInfo"
                        android:layout_width="@dimen/icon_btn_size"
                        android:layout_height="@dimen/icon_btn_size"
                        android:src="@drawable/info"
                        android:layout_marginTop="5dp"


                        android:contentDescription="@string/info"/>
                </LinearLayout>
            </com.google.android.material.appbar.MaterialToolbar>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/notes_recycler"
                android:clipToPadding="false"

                android:layout_marginTop="20dp"

                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            app:fabSize="normal"
            android:layout_height="wrap_content"
            android:src="@drawable/add"
            android:contentDescription="@string/add_item"
            app:maxImageSize="48dp"
            android:layout_gravity="bottom|end"
            android:layout_margin="30dp"/>
    </FrameLayout>

</layout>