<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_bg"
    tools:context=".NoteEditModeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:background="@color/fragment_bg"
        android:id="@+id/edit_mode_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/edit_mode_appbar_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_marginStart="20dp"
                android:layout_width="@dimen/icon_btn_size"
                android:layout_height="@dimen/icon_btn_size"
                android:contentDescription="@string/read_button"
                android:src="@drawable/back"
                app:tint="@color/white" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/btnRead"
                android:layout_width="@dimen/icon_btn_size"
                android:layout_height="@dimen/icon_btn_size"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/read_button"
                android:src="@drawable/read"
                app:tint="@color/white" />

            <ImageButton
                android:id="@+id/btnSave"
                android:layout_width="@dimen/icon_btn_size"
                android:layout_height="@dimen/icon_btn_size"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/save_button"
                android:src="@drawable/save"
                app:tint="@color/white" />
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_mode_appbar">

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <EditText
                android:id="@+id/note_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/title"
                android:textColor="@color/white"
                android:textColorHint="@color/hint"
                android:textSize="@dimen/title_text_size"
                android:imeOptions="actionNext"
                android:inputType="textCapWords|textAutoCorrect"/>

            <com.example.noteapp.CustomEditText
                android:layout_marginTop="20dp"
                android:id="@+id/note_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/note_hint"
                android:inputType="textMultiLine|textNoSuggestions"
                android:imeOptions="flagNoExtractUi"
                android:minLines="5"
                android:scrollbars="vertical"
                android:textColor="@color/white"
                android:textAppearance="@style/NoteTextAppearance"
                android:textColorHint="@color/hint"
                android:textSize="@dimen/note_text_size" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>